cabal-version:   3.12
name:            currency-rates
version:         0.1.0.0
license:         NONE
author:          wyz3r0
maintainer:      dobroszek.d@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable currency-rates
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, http-conduit, aeson, text, Chart, Chart-diagrams, pandoc-types, bytestring, pandoc, process, time, directory
    hs-source-dirs:   app
    default-language: Haskell2010
