cabal-version:   3.8
name:            currency-rates
version:         0.1.0.0
license:         BSD-3-Clause
author:          wyz3r0
maintainer:      dobroszek.d@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable currency-rates
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    base >=4.17 && <4.18,
    http-conduit,
    aeson,
    text,
    Chart,
    Chart-diagrams,
    pandoc-types,
    bytestring,
    pandoc,
    process,
    time,
    directory,
    filepath

executable change
  main-is:          ChangeMain.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    base >=4.17 && <4.18,
    http-conduit,
    aeson,
    text,
    bytestring,
    process,
    time,
    directory,
    filepath
executable chart
  main-is:          Chart.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    Chart-diagrams ^>=1.9.5.1,
    http-client ^>=0.7.19,
    vector ^>=0.13.2.0,
    base >=4.17 && <4.18,
    http-conduit,
    aeson,
    text,
    Chart,
    Chart-cairo,
    time,
    bytestring,
    directory,
    filepath
